# Discovery-Server

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RELEASE_SUPPORT.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  colcon.pkg  discovery-server.repos  discovery-server.sln  discovery-server.vcxproj  discovery-server.vcxproj.filters  version.h.in
.github/: pull_request_template.md
.github/workflows/: mirror.yml  nightly-ubuntu-ci.yml  reusable-ubuntu-ci.yml  ubuntu-ci.yml  weekly-ubuntu-ci.yml
cmake/common/: random_ports.cmake
cmake/modules/: fastcdr-config-version.cmake  fastcdr-config.cmake  fastcdr-targets.cmake  fastrtps-config.cmake  fastrtps-targets.cmake
examples/HelloWorldExampleDS/: CMakeLists.txt  HelloWorldPubSubTypes.cxx  HelloWorldPubSubTypes.h  HelloWorldPublisher.cpp  HelloWorldPublisher.h  HelloWorldServer.cpp  HelloWorldServer.h  HelloWorldSubscriber.cpp  HelloWorldSubscriber.h  HelloWorld_main.cpp  README.txt
include/: DI.h  DSManager.h  DServerEvent.h  DiscoveryItem.h  DiscoveryServerManager.h  EDPServer.h  EDPServerListeners.h  IDs.h  LJ.h  LateJoiner.h  PDPServer.h  PDPServerListener.h
include/version/: config.h
license/: LICENSE
resources/static_types/: HelloWorldPubSubTypes.cxx
resources/validation/: discovery_server_test.py  shared.py  validate.py  validate_ddb_dump.py  validation.py  validation_ddb.py
resources/xml/: config_example.xml  pub_subs_creation.xml  server2server.xml  server_example_1.xml  server_example_2.xml  server_example_3.xml  test_1_PDP_UDP.xml  test_2_PDP_TCP.xml  test_3_PDP_UDP.xml  test_4_PDP_UDP.xml  test_5_EDP_UDP.xml  test_6_EDP_UDP.xml  test_8_lease_server.xml  test_schema.xml  test_schema2.xml
resources/xml/examples/: HelloWorld_TCP_config.xml  HelloWorld_UDP_TCP_config.xml  HelloWorld_UDP_config.xml  HelloWorld_config.xml  HelloWorld_config_minimal_profile.xml  TCP_transport_multiple_clients.xml
resources/xml/old/: pub_subs_creation.xml  server2server.xml  test_1_PDP_UDP.xml  test_3_PDP_UDP.xml  test_5_EDP_UDP.xml  test_6_EDP_UDP.xml  test_7_PDP_UDP.xml  test_8_lease_client.xml
resources/xsd/: config_example.xml  discovery-server.xsd  ds-snapshot.xsd
resources/xtypes/: HelloWorldPubSubTypes.cxx
src/: DI.cpp  DSLog.h.in  DSManager.cpp  DServerEvent.cpp  DiscoveryItem.cpp  DiscoveryServerManager.cpp  EDPServer.cpp  EDPServerListeners.cpp  LJ.cpp  LateJoiner.cpp  PDPServer.cpp  PDPServerListener.cpp  arguments.h  config.h.in  main.cpp
test/: CMakeLists.txt  local_multi.py  local_multi_pub_sub.py  local_multi_pub_sub_fail.py  raspa_test.xml  remote_multi.py  run_test.py  snapshots_1_client1.xml  snapshots_1_client2.xml  snapshots_1_server.xml  test_1_1.xml  test_1_2.xml  test_1_server.xml  test_2_1.xml  test_2_2.xml  test_2_server.xml  test_3_1.xml  test_3_2.xml  test_3_server.xml  tests_params.csv
test/certs/: governance_all_enable.smime  governance_all_enable.xml  permissions.smime  permissions.xml
test/configuration/: intraprocess_full.xml  intraprocess_off.xml  properties.xml  tests_params.json  tests_params_definition.json  tests_params_full.json  tests_params_probe.json  tests_params_probe_building.json
test/configuration/environment_files/: DS_client_1.json  DS_client_3.json  DS_server_2.json  environment.json
test/python/: test_08_lease_duration.py  test_09_WLP.py  test_11_BACKUP.py  test_12_interprocess.py  test_13_trimming.py  test_15_fds.py  test_8_lease_duration.py  test_9_WLP.py
test/shared/: shared.py
test/test_cases/: test_01_trivial.xml  test_04_server_ping.xml  test_05_server_double_ping.xml  test_07_server_endpoints_two_servers.xml  test_08_server_endpoints_four_clients.xml  test_11_remote_servers.xml  test_12_virtual_topics.xml  test_14_disposals_remote_servers.xml  test_17_lease_duration_remove_client_server.xml  test_18_disposals_remote_servers_multiprocess.xml  test_18_disposals_remote_servers_multiprocess_1.xml  test_18_disposals_remote_servers_multiprocess_2.xml  test_20_break_builtin_connections.xml  test_22_environment_variable_setup.xml  test_23_fast_discovery_server_tool.xml  test_24_backup.xml  test_24_backup_1.xml  test_25_backup_compatibility.xml  test_26_backup_restore.xml  test_26_backup_restore_1.xml  test_27_tcp.xml  tests_params.csv
test/test_solutions/: test_04_server_ping.snapshot  test_12_virtual_topics.snapshot  test_17_lease_duration_remove_client_server.snapshot  test_19_disposals_break_builtin_connections.snapshot  test_20_break_builtin_connections.snapshot  test_22_environment_variable_setup.snapshot  test_23_fast_discovery_server_tool.snapshot  test_24_backup.snapshot  test_24_backup_1.snapshot  test_25_backup_compatibility.snapshot  test_26_backup_restore.snapshot
test/unify_test_v2/: execute_tests.py
test/validation/: CountLinesValidation.py  CountLinesValidator.py  ExitCodeValidation.py  GenerateValidation.py  GenerateValidator.py  GroundTruthValidation.py  GroundTruthValidator.py  StderrOutputValidation.py  TestParams.py  Validator.py  shared.py  validate.py  validation.py
test/xml/: test_01_PDP_UDP.xml.in  test_03_PDP_UDP.xml.in  test_05_EDP_TCP.xml.in  test_05_EDP_UDP.xml.in  test_06_EDP_UDP.xml.in  test_07_PDP_UDP.xml.in  test_08_lease_client.xml.in  test_08_lease_server.xml.in  test_09_WLP_client.xml.in  test_09_WLP_server.xml.in  test_10_simple_PDP_EDP.xml.in  test_11_BACKUP_client.xml.in  test_11_BACKUP_server.xml.in  test_12_interprocess_client1.xml.in  test_12_interprocess_client2.xml.in  test_12_interprocess_client3.xml.in  test_12_interprocess_server.xml.in  test_13_trimming.xml.in  test_13_trimming_client.xml.in  test_13_trimming_server.xml.in  test_14_environment_variable_setup.xml.in  test_15_fds.xml.in  test_1_PDP_UDP.xml.in  test_2_PDP_TCP.xml.in  test_3_PDP_UDP.xml.in  test_4_PDP_UDP.xml.in  test_5_EDP_TCP.xml.in  test_5_EDP_UDP.xml.in  test_6_EDP_UDP.xml.in  test_7_PDP_UDP.xml.in  test_8_lease_client.xml.in  test_8_lease_server.xml.in  test_9_WLP_client.xml.in  test_9_WLP_server.xml.in
utils/scripts/: update_generated_code_from_idl.sh
(+296 files in other folders)
